tests/fixtures/invalid/pow_none_str_bool.py
# Cannot call pow() with None, Str, Bool
x = pow(None, "hello", True)
